pods/networking/oretademosite-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: oretademosite-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oretademosite
spec:
  hosts:
  - "*"
  gateways:
  - oretademosite-gateway
  http:
  - match:
    - uri:
        exact: /ccpdemo
    route:
    - destination:
        host: oretademosite
        port:
          number: 9090
